# rust-wasm-mandelbrot

./: .gitignore  Cargo.toml  README.md  index.html  presets.js
pkg/: README.md  package.json  rust_wasm_mandelbrot.d.ts  rust_wasm_mandelbrot.js  rust_wasm_mandelbrot_bg.js  rust_wasm_mandelbrot_bg.wasm  rust_wasm_mandelbrot_bg.wasm.d.ts
src/: lib.rs
