[package]
name = "rust-wasm-mandelbrot"
version = "0.1.0"
authors = ["leijingyu"]
edition = "2021"

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "^0"
wasm-bindgen-test = "^0"
wee_alloc = {version = "0.4", optional = true}
web-sys = {version = "^0", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'console'
]}

[lib]
crate-type = ["cdylib", "rlib"]